[package]
name = "celo-addr-gen"
version = "0.1.0"
authors = ["Nam Chu Hoai <nambrot@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-bip39 = "0.7.3"
hdwallet = "0.2.5"
rust-crypto = "0.2"
eth_checksum = "0.1.1"